--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,14 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Ambientes virtuais
+.venv/
+__pycache__/
+
+# Arquivos temporários
+*.log
+*.tmp
+
+# Configurações locais do VS Code
+.vscode/
